# walrus

./: .dockerignore  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  justfile  rust-toolchain.toml
.sqlx/: .gitkeep  query-0438457747567a7f2a96e56c6554cebbf69da93b87a93f8d617e2aa367a63bf6.json  query-0534e78f2fe3a2ddfba765dcea0aeb007a3ddcf3bd8e68bb0fa13c83f9f2bffb.json  query-08bd99174bd855f100368209ffd27b26254279cfc7922ab9f9a26c8e9149dce2.json  query-0d1e4f251bb622a33f712ea3c35a661e018e3f0f3ffc1416a469de365d7f84d8.json  query-11aa954ca1a6e56408b445c47dfc39babeb7eef37ee34b47e47ac3c1ac6c6d06.json  query-16179be0174376bdfc2a989aaddc5eb0b6fbcee5b73188035d943148338ddaf4.json  query-17d7832fc9b6bd28e6a5a8214fc6053f3a96ca564bd14bbc32d2e064729de05c.json  query-18a2fe473f2748269e43f35081b309d32c462a11fd5cb15480376657118cdbc7.json  query-211f7b228ba4802c86f85b36283049ef2ff9256ffed7e23d9f9f5ab0c26803d4.json  query-2470b98228fb00aa8c13ff7566a3b10e4a6d49f4b4b9527450a9bc2f98567ea3.json  query-254eeac7bc03f7e2cd06401e4ad4db36e15a1d49eef59d81c17f30bbb85638ae.json  query-33152fd8f6747c2332be7bb27a0e34d01b00ee067c125ad57f90603943651428.json  query-35acf76cca03c6cade57e235a3dc41dcba10c1b63204c99c82a0c7eee51a8c10.json  query-36b0ff94967c5cb2d795cfff79d8e397e74f4f158c62307a9b1ae0bf5010c12a.json  query-3931440e9ba169158843862f6e2fb61b0fc8c2a493ec9e9e2dbb656dff767624.json  query-3bed97a7b8776216eed587c7d7da90116f26fb070d5bc959a80c71eeb0002185.json  query-42186c788d6bc4d4a478f9d07c71c0e4555f9bbb5b202ce07a8e2f09d03f5792.json  query-46cb7f7cc2006265798c4c86e7a6794ac6b284b20e4d17055fc33734cb963378.json  query-4a8947f293e73eda7860d572d1c2fb16bb4a40991784a6bcc6a5c16791e67803.json  query-5113d73616fd1363f788af80d580df50768f865350ee4e8008ba57b295007195.json  query-512a2d92afa1a671c186d67224f8ef4bac800e48660d2248c5b3680acb78b302.json  (+52 more)
crates/common/: Cargo.toml
crates/common/src/: config.rs  config_test.rs  error.rs  error_test.rs  ids.rs  ids_test.rs  lib.rs  lsn.rs  lsn_test.rs  metrics.rs  metrics_test.rs  pg_shape.rs  pg_shape_test.rs  sink_meta.rs  sink_meta_test.rs  sql.rs  sql_test.rs  telemetry.rs  telemetry_test.rs  type_descriptor.rs  type_descriptor_test.rs
crates/control/: Cargo.toml
crates/control/sql/postgres/queries/: active_rebuilds.sql  adopt_resumable.sql  advance_cursor.sql  advance_raw_appended.sql  advance_transformed.sql  bump_epoch.sql  claim_ready.sql  claim_requested.sql  complete.sql  complete_export.sql  complete_reached.sql  delete_claimed.sql  delete_superseded.sql  ensure_checkpoint.sql  fail.sql  fail_purge_files.sql  get.sql  insert_ddl.sql  insert_epoch.sql  insert_ready.sql  mark_failed.sql  max_ready_lsn_end.sql  read_checkpoint.sql  read_current_epoch.sql  read_latest_version.sql  read_pending_ddl.sql  read_registry.sql  release_claim.sql  reload_supersede_floor.sql  renew_lease.sql  request_reload.sql  restart_for_ddl.sql  stuck_exporting.sql  upsert_registry.sql
crates/control/src/: checkpoint.rs  db.rs  db_test.rs  ddl_manifest.rs  lib.rs  manifest.rs  manifest_test.rs  reload.rs  reload_test.rs  replication_state.rs  schema_registry.rs  table_ownership.rs
crates/control/tests/: checkpoint.rs  manifest.rs  migrations.rs  registry_ddl.rs  reload.rs  reload_pause.rs  schema_registry_descriptor.rs
crates/loader/: Cargo.toml
crates/loader/benches/: append.rs  transform.rs
crates/loader/sql/duckdb/templates/: alter_add_applied.sql  append_parquet.sql  configure_s3.sql  create_meta.sql  create_mirror.sql  create_raw.sql  create_user_view.sql  reload_rebuild_drop.sql  wipe_generation.sql
crates/loader/src/: apply_loop.rs  bootstrap.rs  compaction.rs  config.rs  ddl.rs  duck.rs  duck_test.rs  epoch.rs  epoch_test.rs  error.rs  health.rs  health_test.rs  lease.rs  lib.rs  main.rs  ownership.rs  phase_a.rs  phase_a_test.rs  phase_b.rs  plan.rs  shutdown.rs  transform.rs  transform.sql
crates/loader/tests/: bootstrap.rs  compaction.rs  ddl_additive.rs  ddl_destructive.rs  metrics_scrape.rs  phase_a.rs  phase_b.rs  reload_rebuild.rs  reload_resync.rs  shutdown.rs  snapshot_boundary.rs  transform.rs
crates/pg-sink/: Cargo.toml
crates/pg-sink/benches/: decode.rs
crates/pg-sink/src/: backfill.rs  batch.rs  batch_test.rs  bootstrap.rs  bootstrap_test.rs  checkpoint.rs  checkpoint_test.rs  config.rs  config_test.rs  consume.rs  ddl.rs  ddl_test.rs  epoch.rs  epoch_test.rs  health.rs  health_test.rs  heartbeat.rs  heartbeat_test.rs  lib.rs  main.rs  manifest.rs  manifest_test.rs  memory.rs  memory_test.rs  preflight.rs  preflight_test.rs  relcache.rs  relcache_test.rs  reload.rs  reload_export.rs  reload_export_test.rs  reload_signal.rs  reload_signal_test.rs  reload_test.rs  replication.rs  replication_test.rs  shutdown.rs  shutdown_test.rs  sink.rs  sink_test.rs  (+5 more)
crates/pg-sink/src/pgoutput/: error.rs  mod.rs  reader.rs  typmod.rs  typmod_test.rs
crates/pg-sink/tests/: batching.rs  ddl_capture.rs  durability.rs  graceful_shutdown.rs  health.rs  heartbeat_liveness.rs  live_decode.rs  manifest_insert.rs  max_inflight_bytes.rs  metrics_scrape.rs  parquet_put.rs  pgoutput_vectors.rs  preflight.rs  relation_cache.rs  reload_ddl.rs  reload_echo.rs  reload_export.rs  reload_metrics.rs  reload_pickup.rs  reload_recovery.rs  reload_signal.rs  replication_spike.rs  snapshot_backfill.rs  streaming_large_txn.rs  subtransaction_exclusion.rs
crates/pg-to-arrow/: Cargo.toml
crates/pg-to-arrow/benches/: batch.rs
crates/pg-to-arrow/src/: batch.rs  batch_test.rs  descriptor.rs  descriptor_test.rs  error.rs  geometric.rs  geometric_test.rs  lib.rs  oids.rs  parquet.rs  parquet_test.rs  range.rs  range_test.rs  schema.rs  schema_test.rs  tier2.rs  tier2_test.rs  tier3.rs  tier3_test.rs  uuid_enum.rs  uuid_enum_test.rs
crates/pg-to-arrow/tests/: conformance.rs
docs/: architecture.md  (+7 more)
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/tests/: crash_safety.rs  heartbeat.rs  keepalive.rs  large_txn.rs  reload_quarantine.rs  reload_scale.rs  subtxn_abort.rs  thin_slice.rs  total_restart.rs  type_matrix.rs  unchanged_toast.rs  wal_runaway.rs
(+153 files in other folders)
