[workspace]
resolver = "2"
members = ["crates/common", "crates/control", "crates/pg-sink"] # grows one crate at a time, following the DAG in docs/implementation/README.md

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.95" # keep in sync with rust-toolchain.toml; MSRV formalised in PR 4.7

# Lint-as-policy, centralised so no member crate can silently opt out of `deny(warnings)`.
# NOTE: these only take effect in a member once it declares `[lints] workspace = true`.
[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = "deny"

[workspace.dependencies]
# Shared version pins land here as later PRs add deps (tracing, sqlx, arrow, …).
thiserror = "2"
serde = "1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
figment = "0.10"
humantime-serde = "1"
jiff = "0.2"
bytes = "1"
tokio = "1"
sqlx = "0.8"
anyhow = "1"
hex = "0.4"
