[workspace]
resolver = "2"
members = ["crates/common", "crates/control", "crates/pg-sink", "crates/pg-to-arrow"] # grows one crate at a time, following the DAG in docs/implementation/README.md

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.95" # keep in sync with rust-toolchain.toml; MSRV formalised in PR 4.7

# Lint-as-policy, centralised so no member crate can silently opt out of `deny(warnings)`.
# NOTE: these only take effect in a member once it declares `[lints] workspace = true`.
[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = "deny"

[workspace.dependencies]
# Shared version pins land here as later PRs add deps (tracing, sqlx, arrow, …).
thiserror = "2"
serde = "1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
figment = "0.10"
humantime-serde = "1"
jiff = "0.2"
bytes = "1"
tokio = "1"
sqlx = "0.8"
anyhow = "1"
hex = "0.4"
# Pinned to EXACT versions (PR 2.16): DuckDB reads a native `UUID` only when arrow-rs annotates the
# FixedSizeBinary(16) with the `arrow.uuid` canonical extension → Parquet UUID logical type. That
# annotation is behaviour a minor bump could change, so the (CI-guarded) uuid mapping pins arrow +
# parquet, and duckdb is pinned alongside for a stable read-back. §2.4 uuid.
arrow = "=54.3.1"
parquet = "=54.3.1"
duckdb = "=1.10504.0"
uuid = "1"
tempfile = "3"
# Sink binary (PR 2.18): health endpoints, cancellation, object-store canary.
axum = "0.7"
tokio-util = "0.7"
object_store = "0.11"
# Replication-capable source connection + catalog preflight (PR 2.19); START_REPLICATION (PR 2.20).
tokio-postgres = "0.7"
