[package]
name = "common"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true # inherit deny(warnings) + clippy::all from the workspace root

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
figment = { workspace = true, features = ["env", "toml", "yaml"] }
humantime-serde = { workspace = true }
# jiff over `time`: jiff::Timestamp is inherently a UTC instant and Displays as RFC-3339 with a
# `Z` suffix, so UtcTimestamp cannot accidentally emit a local/offset datetime.
jiff = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
# `test` feature adds figment::Jail for hermetic env/file config tests (dev-only).
figment = { workspace = true, features = ["test"] }
