[package]
name = "common"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true # inherit deny(warnings) + clippy::all from the workspace root

[features]
# Opt-in sqlx `Type`/`Encode`/`Decode` for `Lsn` <-> Postgres `pg_lsn` (delegating to sqlx's
# PgLsn). Off by default so non-DB consumers of `common` don't pull sqlx; `control`/`loader` enable it.
sqlx = ["dep:sqlx"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
figment = { workspace = true, features = ["env", "toml", "yaml"] }
humantime-serde = { workspace = true }
# jiff over `time`: jiff::Timestamp is inherently a UTC instant and Displays as RFC-3339 with a
# `Z` suffix, so UtcTimestamp cannot accidentally emit a local/offset datetime.
jiff = { workspace = true }
bytes = { workspace = true }
# Observability (PR 4.10): the `metrics` facade (call-site macros are no-ops until a recorder is
# installed) + the Prometheus recorder whose handle renders the /metrics text exposition.
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
sqlx = { workspace = true, optional = true, features = [
    "runtime-tokio",
    "postgres",
] }

[dev-dependencies]
serde_json = { workspace = true }
# `test` feature adds figment::Jail for hermetic env/file config tests (dev-only).
figment = { workspace = true, features = ["test"] }
