[package]
name = "control"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
# Compose-gated integration tests (require a live control Postgres). Off by default so the
# DB-free baseline `cargo test --workspace` skips them; the CI integration job turns it on.
integration = []

[dependencies]
common = { path = "../common", features = ["sqlx"] }
thiserror = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
