[package]
name = "control"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
# Compose-gated integration tests (require a live control Postgres). Off by default so the
# DB-free baseline `cargo test --workspace` skips them; the CI integration job turns it on.
integration = []

[dependencies]
common = { path = "../common", features = ["sqlx"] }
thiserror = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
    "json",
] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
# Dev-only: the schema_registry round-trip test builds real TypeDescriptors from pg-to-arrow. Legal —
# pg-to-arrow depends on `common` only, so there is NO cycle; the production DAG (control → common)
# is unchanged.
pg-to-arrow = { path = "../pg-to-arrow" }
