[package]
name = "pg-sink"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "pg_sink"

[[bin]]
name = "walrus-pg-sink"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
common = { path = "../common" }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
bytes = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
# Test-only: the golden-vector renderer converts µs-since-2000 timestamps to Python's isoformat.
jiff = { workspace = true }
# Test-only: name the seam types (ReplicaIdentity, …) the decoder produces when asserting on them.
common = { path = "../common" }
