[package]
name = "pg-sink"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "pg_sink"

[[bin]]
name = "walrus-pg-sink"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
common = { path = "../common" }
# The sink writes to the control plane via `control`'s API; `sqlx` here only names the `PgPool`
# `control::connect` returns (the shared control-plane handle the loop will use).
control = { path = "../control" }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
] }
thiserror = { workspace = true }
anyhow = { workspace = true }
# Non-poisoning mutex for the reload-signal waiters (PR 7.6).
parking_lot = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
# Relation cache (PR 2.22): decoded PgRelation → Arrow schema + TypeDescriptors.
pg-to-arrow = { path = "../pg-to-arrow" }
arrow = { workspace = true }
# Parquet encode → S3 (PR 2.24): AsyncArrowWriter streams into an object_store multipart writer.
parquet = { workspace = true, features = ["async"] }
uuid = { workspace = true, features = ["v4"] }
figment = { workspace = true, features = ["env", "toml", "yaml"] }
humantime-serde = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "net",
    "time",
] }
tokio-util = { workspace = true }
tokio-postgres = { workspace = true, features = ["runtime"] }
axum = { workspace = true }
object_store = { workspace = true, features = ["aws"] }
bytes = { workspace = true }
byteorder = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
# Test-only: tokio::time::pause via #[tokio::test(start_paused = true)] (the reload lease tests).
tokio = { workspace = true, features = ["test-util"] }
# Test-only: the golden-vector renderer converts µs-since-2000 timestamps to Python's isoformat.
jiff = { workspace = true }
# Test-only: name the seam types (ReplicaIdentity, …) the decoder produces when asserting on them.
common = { path = "../common" }
# Micro-benches (PR 5.4): pgoutput decode throughput over synthetic frames.
criterion = { workspace = true }

# `harness = false` hands the bench binary to criterion_main! instead of the libtest bench harness.
[[bench]]
name = "decode"
harness = false
