[package]
name = "pg-to-arrow"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
common = { path = "../common" }
arrow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
# jiff parses canonical Postgres temporal text into micros/days; hex decodes bytea `\x…` text.
jiff = { workspace = true }
hex = { workspace = true }
