[package]
name = "pg-to-arrow"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
# `conformance` pulls the bundled DuckDB (a minutes-long C++ compile) for the read-back tests.
# Off by default so `cargo test`/`build` stay fast; the CI conformance job (and clippy
# --all-features) is the only place it compiles.
conformance = ["dep:duckdb"]

[dependencies]
common = { path = "../common" }
# `canonical_extension_types` exposes the `Uuid` extension so the parquet writer emits the UUID
# logical type (a plain FixedSizeBinary(16) reads back as BLOB, not UUID). §2.4 uuid, PR 2.16.
arrow = { workspace = true, features = ["canonical_extension_types"] }
parquet = { workspace = true, features = ["arrow_canonical_extension_types"] }
thiserror = { workspace = true }
serde_json = { workspace = true }
# jiff parses canonical Postgres temporal text into micros/days; hex decodes bytea `\x…` text.
jiff = { workspace = true }
hex = { workspace = true }
# uuid parses canonical UUID text into the 16 bytes the FixedSizeBinary(16) + arrow.uuid path needs.
uuid = { workspace = true }
duckdb = { workspace = true, features = ["bundled"], optional = true }

[dev-dependencies]
tempfile = { workspace = true }
bytes = { workspace = true }
# Micro-benches (PR 5.4): BatchBuilder::append_row + finish throughput; isolated meta-JSON cost.
criterion = { workspace = true }

# `harness = false` hands the bench binary to criterion_main! instead of the libtest bench harness.
[[bench]]
name = "batch"
harness = false
